Agrego consulta por Procedimiento almacenado

--- a/SGPI/appsettings.json
+++ b/SGPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "conexionSQL": "Server=DESKTOP-IL4AKQQ\\SQLEXPRESS;Database=SGPI; Integrated Security = true;Trusted_Connection=True;TrustServerCertificate=True"
+    "conexionSQL": "Server=DESKTOP-IL4AKQQ\\SQLEXPRESS;Database=SGPI; Integrated Security = true;Trusted_Connection=True;TrustServerCertificate=True; MultipleActiveResultSets=True;"
   },
   "Logging": {
     "LogLevel": {
